--- a/environment.yaml
+++ b/environment.yaml
@@ -2,9 +2,10 @@ name: pypsa-agora-h2
 channels:
   - conda-forge
 dependencies:
-  - python >=3.11,<3.12.0a0
-  - pypsa==0.28
   - ipython
   - ipykernel==6.25.0
+  - nbstripout==0.7.1
   - numpy
-  - pandas==2.1 # >=1.4.3
+  - pandas==2.1
+  - pypsa==0.28
+  - python >=3.11,<3.12.0a0
